# apartment-manager

./: .gitattributes  .gitignore  README.md  bills_analysis.txt  bills_data.json  debug_query.py  fix2.py  fix3.py  fix4.py  fix5.py  fix_bill.py  fix_bill_cmd.py  fix_bill_cmd2.py  fix_bill_cmd3.py  fix_braces.py  fix_braces2.py  fix_fields.py  fix_queries.py  h.md  index.html  normalize.py  package.json  pnpm-lock.yaml  refactor_bills.py  refactor_bills2.py  refactor_bills3.py  refactor_bills4.py  refactor_bills_final.py  refactor_bills_v5.py  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/database/: v2.0.2_schema.sql  v2.0.3_schema.sql  v2.0.4_schema.sql  v2.1.1_schema.sql
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  auth_async.rs  commands.rs  db.rs  errors.rs  interceptors.rs  lib.rs  main.rs  models.rs  phase0_validation.rs  services.rs  utils.rs
src-tauri/src/commands/: auth_commands.rs  backup_commands.rs  bill_commands.rs  collection_agent_commands.rs  config_commands.rs  deposit_commands.rs  diagnostic.rs  document_commands.rs  export_commands.rs  import_commands.rs  lease_commands.rs  maintenance_commands.rs  meter_reading_commands.rs  payment_commands.rs  reminder_commands.rs  report_commands.rs  room_commands.rs  tenant_commands.rs
src-tauri/src/db/: connection.rs  connection_async.rs  migrations.rs  migrations_async.rs  queries.rs  queries_async.rs  test_helpers.rs
src-tauri/src/interceptors/: logging.rs
src-tauri/tests/: integration_tests.rs
(+164 files in other folders)
