[package]
name = "apartment-manager-v2"
version = "2.0.5"
description = "新逸公寓租金管理系统 V2.0.5"
authors = [""]
edition = "2021"

[features]
default = ["legacy-db"]
legacy-db = ["rusqlite"]
new-db = ["sqlx", "tokio", "async-trait"]

[lib]
name = "apartment_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库（旧版，legacy-db feature）
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# 数据库（新版，new-db feature）
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

# 错误处理
thiserror = "1"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 正则
regex = "1"

# 基础64
base64 = "0.22"

# Excel 读取
calamine = { version = "0.26", features = ["dates"] }

# 目录路径
dirs-next = "2.0"

# 密码哈希
bcrypt = "0.15"

[dev-dependencies]
tempfile = "3"
